# pose_optimizer

./: CMakeLists.txt  README.md
pose_optimizer/: common.h  loss_function.h  options.h  summary.cc  summary.h  text_colorizer.h  time_monitor.cc  time_monitor.h  types.h
pose_optimizer/single_pose_optimizer/: cost_function.h  loss_function.h  problem.h  residual_block.h  single_pose_optimizer.cc  single_pose_optimizer.h
tests/: CMakeLists.txt
tests/test_3d_pose_optimization/: test_mahalanobis_distance_minimization.cc  test_reprojection_error_minimization.cc  test_variadic_cost.cc
